tests/snapshots/snapshots__pipeline@deriving_unknown.pr.snap
---
source: tests/snapshots.rs
expression: "tiny_prism::report(&src)"
input_file: tests/cases/deriving_unknown.pr
---
== tokens ==
VOpen Class UIdent("Eq") LParen Ident("a") RParen LBrace Ident("eq") Colon LParen Ident("a") Comma Ident("a") RParen Arrow KwBool RBrace VSemi Type UIdent("Foo") Eq UIdent("A") Bar UIdent("B") Deriving LParen UIdent("Eq") Comma UIdent("Monoid") RParen VSemi Fn Ident("main") LParen RParen Eq UIdent("A") VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Foo",
            params: [],
            ctors: [
                Ctor {
                    name: "A",
                    args: [],
                    fields: None,
                },
                Ctor {
                    name: "B",
                    args: [],
                    fields: None,
                },
            ],
            deriving: [
                (
                    "Eq",
                    66..68,
                ),
                (
                    "Monoid",
                    70..76,
                ),
            ],
            newtype: false,
            span: 39..77,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [
        ClassDecl {
            name: "Eq",
            param: "a",
            supers: [],
            methods: [
                (
                    "eq",
                    Fun(
                        [
                            Var(
                                "a",
                            ),
                            Var(
                                "a",
                            ),
                        ],
                        Empty,
                        Bool,
                    ),
                ),
            ],
            span: 0..37,
        },
    ],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Var(
                    "A",
                ),
                span: 91..92,
            },
            wheres: [],
            span: 79..92,
        },
    ],
}

== types ==
Type Error: unknown class in deriving: Monoid
   ╭─[ <source>:5:32 ]
   │
 5 │ type Foo = A | B deriving (Eq, Monoid)
   │                                ───┬──  
   │                                   ╰──── unknown class in deriving: Monoid
───╯
